# trust-bot

./: .env.example  .gitignore  CHUNK_VISUALIZER_FIX.md  CODE_EXTENSIONS_FIX.md  COMPLETE_FIX_SUMMARY.md  DATABASE_SCHEMA_FIX.md  DELPHI_SUPPORT_FIX.md  E2E_VALIDATION_TEST_RESULTS.md  ENHANCED_FEATURES_COMPLETE.md  FEATURES_SUMMARY.md  FINAL_FIX_IMPORT_ERROR.md  GIT_INDEX_INTEGRATION_FIX.md  QUICKSTART.md  README.md  TESTING_REPORT.md  TEST_RESULTS.md  agent2_analysis.md  pyproject.toml  requirements.txt  validation_report.md
.nicegui/: storage-user-7ef39921-e4c3-41e0-a958-09b7ce29190a.json  storage-user-eb205b23-f8d6-42b4-ad5f-ebafb4bb68fb.json
checklist/: Yaml_checklist.md
docs/: PRD_db_entity_checker.md  PRD_local_folder_indexing.md
scripts/: _fix_unicode.py  analyze_ui_content.py  check_db_schema.py  check_indexed_files.py  debug_chunk_content.py  debug_chunks.py  debug_flow.py  debug_flow_unit1.py  debug_index.py  explore_neo4j.py  explore_project.py  export_neo4j_callgraph.py  extract_iframes.py  extract_text_content.py  fetch_db_entities.py  final_ui_test.py  generate_sample_files.py  inspect_ui.py  neo4j_db_entities_976.json  quick_verify.py  run_browser_test.py  run_validation.py  run_validation_test.py  test_3agent_ui.py  test_accordions_detailed.py  test_agentic_components.py  test_calltree.py  test_chunk_viz.py  test_context_window.py  test_e2e_calltree.py  test_e2e_features.py  test_e2e_full_flow.py  test_litellm_speed.py  test_reindex.py  test_ui_e2e.py  test_ui_validation_flow.py  test_validate_and_check.py  test_with_better_selectors.py  (+3 more)
(+129 files in other folders)
